--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/jj11hh/yavt.fengtao.xyz">Github</a>
+                    <a class="nav-link" href="https://github.com/xuanzhi33/yavt/">Github</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About us</a>
+                    <a class="nav-link" href="http://www.xuanzhi33.top">返回主站</a>
                 </li>
             </ul>
         </div>
@@ -40,49 +40,15 @@
                     <p class="card-text">你将会看到一系列观点，请点击对应按钮选择你对于每个观点的看法，请尽量放在中国语境下思考。</p>
                     <p class="card-text">你可能会看到一些会对你的世界观造成强烈冲击的观点,这些观点仅用于测试,不意味着作者或其他人持有这些观点。</p>
                     <p class="card-text"><strong>注意：</strong>我们不会收集你的个人信息。</p>
+                    <p>来自Github上的开源项目</p>
                 </div>
         <div>
-<a class="btn btn-success btn-block" href="quiz.html?question=yavt_0_2_1"></a>
+<a class="btn btn-success btn-block" href="quiz.html?question=yavt_0_2_1">立即开始</a>
         </div>
     </div>
-    <!-- 模态框 -->
 
-    <div class="modal fade" id="startmodal">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-
-                <!-- 模态框头部 -->
-                <div class="modal-header">
-                    <h4 class="modal-title">YAVT测试说明</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-
-
-
-                <!-- 模态框底部 -->
-                <div class="modal-footer">
-                    <div class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle" 
-                                type="button" 
-                                id="btn-dropdown"
-                                data-toggle="dropdown"
-                                aria-haspopup="true"
-                                aria-expanded="false">
-                            选择版本
-                        </button>
-                        <div id="version-list" class="dropdown-menu" aria-labelledby="btn-dropdown">
-
-                        </div>
-                    </div>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">等等，还是算了！</button>
-                </div>
-
-            </div>
-        </div>
-    </div>
 
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
     <script src="js/bootstrap-4.4.1.js"></script>
 </body>
 </html>
