--- a/result.html
+++ b/result.html
@@ -23,10 +23,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/jj11hh/yavt.fengtao.xyz">Github</a>
+                    <a class="nav-link" href="https://github.com/xuanzhi33/yavt/">Github</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About us</a>
+                    <a class="nav-link" href="http://www.xuanzhi33.top/">返回主站</a>
                 </li>
             </ul>
         </div>
