--- a/quiz.html
+++ b/quiz.html
@@ -9,7 +9,35 @@
     <link rel="shortcut icon" type="x-icon" href="icon.png">
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
     <link href="open-iconic/font/css/open-iconic-foundation.min.css" rel="stylesheet">
+    <style>
+        body {
+            background: #e9f1e9;
+        }
 
+        a,
+        a:hover {
+            color: #296324;
+            text-decoration: none;
+        }
+
+        .navbar {
+            background: #e9f1e9;
+        }
+
+        .glass {
+            border: 2px solid #296324;
+            line-height: 2;
+            border-radius: 0px;
+        }
+
+        .btn,
+        .form-control,
+        .input-group-text,
+        .badge,
+        .alert {
+            border-radius: 0px;
+        }
+    </style>
     <title>YAVT</title>
 </head>
 
