--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-primary navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg bg-primary">
         <a class="navbar-brand" href="/">Yet Another Values Test</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
