--- a/index.html
+++ b/index.html
@@ -38,32 +38,16 @@
             border-radius: 0px;
         }
     </style>
-    <title>YAVT</title>
+    <title>YAVT 测试</title>
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-primary">
-        <a class="navbar-brand" href="/">Yet Another Values Test</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/xuanzhi33/yavt/">Github</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="http://www.xuanzhi33.top">返回主站</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <br class="brBefore">
+    <br class="brBefore">
     <div class="container">
         <div class="card glass"> <br>
             <div class="container">
-                <h1 class="text-center" id="h">YAVT</h1>
+                <h1 class="text-center" id="h">YAVT 测试</h1>
                 <p>Yet Another Values Test是一个基于8Values的在中国语境下的测试。</p>
                 <p>你将会看到一系列观点，请点击对应按钮选择你对于每个观点的看法，请尽量放在中国语境下思考。</p>
                 <p>你可能会看到一些会对你的世界观造成强烈冲击的观点,这些观点仅用于测试,不意味着作者或其他人持有这些观点。</p>
