--- a/result.html
+++ b/result.html
@@ -42,25 +42,8 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-primary navbar-light bg-light">
-        <a class="navbar-brand" href="/">Yet Another Values Test</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/xuanzhi33/yavt/">Github</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="http://www.xuanzhi33.top/">返回主站</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
+    <br class="brBefore">
+    <br class="brBefore">
     <div class="container mt-4">
         <div class="card">
             <div class="card-title">
