改进交互界面

--- a/quiz.html
+++ b/quiz.html
@@ -38,7 +38,7 @@
             border-radius: 0px;
         }
     </style>
-    <title>YAVT</title>
+    <title>YAVT 测试</title>
 </head>
 
 <body>
@@ -47,12 +47,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-12 question-container">
-                <div class="question-inner">
+                <div class="question-inner glass">
                     <p class="lead" id="question-text"></p>
                 </div>
             </div>
             <div class="col-lg-4 col-12 selection-container">
-                <div class="card">
+                <div class="card glass pt-2">
                     <div class="card-title">
                         <h2 style="text-align:center;" id="question-number">载入中……</h2>
                     </div>
