--- a/result.html
+++ b/result.html
@@ -45,7 +45,7 @@
     <br class="brBefore">
     <br class="brBefore">
     <div class="container mt-4">
-        <div class="card">
+        <div class="card glass">
             <div class="card-title">
                 <h2 class="text-center mt-2">
                     YAVT结果
