--- a/result.html
+++ b/result.html
@@ -47,6 +47,7 @@
     <div class="container mt-4">
         <div class="card glass">
             <div class="card-title">
+                <a href="http://www.xuanzhi33.top/" class="backBtn">返回主站</a>
                 <h2 class="text-center mt-2">
                     YAVT结果
                     <button class="d-inline btn btn-primary" id="btn-result-save" disabled>
