--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div class="container">
         <div class="card glass"> <br>
             <div class="container">
+                <a href="http://www.xuanzhi33.top/" class="backBtn">返回主站</a>
                 <h1 class="text-center" id="h">YAVT 测试</h1>
                 <p>Yet Another Values Test是一个基于8Values的在中国语境下的测试。</p>
                 <p>你将会看到一系列观点，请点击对应按钮选择你对于每个观点的看法，请尽量放在中国语境下思考。</p>
@@ -59,7 +60,8 @@
             <br>
         </div>
     </div>
-
+    <br class="brBefore">
+    <br class="brBefore">
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap-4.4.1.js"></script>
