--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
                 <p>你将会看到一系列观点，请点击对应按钮选择你对于每个观点的看法，请尽量放在中国语境下思考。</p>
                 <p>你可能会看到一些会对你的世界观造成强烈冲击的观点,这些观点仅用于测试,不意味着作者或其他人持有这些观点。</p>
                 <p><strong>注意：</strong>我们不会收集你的个人信息。</p>
-                <p>来自Github上的开源项目<br>
-                    fork from https://github.com/YetAnotherValuesTest/YetAnotherValuesTest.github.io</p>
+                <p>来自Github上的<a href="https://github.com/xuanzhi33/yavt/">开源项目</a></p>
                     <a class="btn btn-success btn-block" href="quiz.html?question=yavt_0_2_1">立即开始</a>
             </div>
             <br>
