--- a/result.html
+++ b/result.html
@@ -47,13 +47,15 @@
     <div class="container mt-4">
         <div class="card glass">
             <div class="card-title">
-                <a href="http://www.xuanzhi33.top/" class="backBtn">返回主站</a>
                 <h2 class="text-center mt-2">
                     YAVT结果
                     <button class="d-inline btn btn-primary" id="btn-result-save" disabled>
                         <span class="fi-cloud-download" title="save" aria-hidden="true"></span>
                         保存
                     </button>
+                    <a class="d-inline btn btn-success" href="./">
+                        重新测试
+                    </a>
                 </h2>
             </div>
             <hr />
